--- a/views/userlist.ejs
+++ b/views/userlist.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -12,5 +12,47 @@
       <li><%= user.username %></li>
     <% } %>
   </ul>
+</body>
+</html>
+
+
+ -->
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+<body>
+
+<div class="container mt-3">
+  <h2>Table</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Username</th>
+        <th>Password</th>
+        <th>Role</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% for (const user of users) { %>
+      <tr>
+        <td><%= user.username %></td>
+        <td><%= user.password %></td>
+        <td><%= user.role %></td>
+      </tr>
+      <% } %>
+     
+    </tbody>
+  </table>
+</div>
+
 </body>
 </html>
